--- a/shadow-dom-style.html
+++ b/shadow-dom-style.html
@@ -3,6 +3,9 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Styling a Shadow DOM</title>
+		<!--<link rel="stylesheet" href="http://yandex.st/highlightjs/8.0/styles/default.min.css">-->
+		<link rel="stylesheet" href="hlcss.css">
+		<script src="http://yandex.st/highlightjs/8.0/highlight.min.js"></script>
 		<style type="text/css">
 			h1 {
 				text-decoration: underline;
@@ -27,7 +30,7 @@
 		</style>
 	</head>
 	<body>
-		<div>
+		<div id="hl">
 			<h1>DOM's H1 is so pretty</h1>
 			<template id="shadow" reset-style-inheritance>
 				<style type="text/css">
@@ -76,5 +79,15 @@
 				
 			</script>
 		</div>
+		<!-- For the codez -->
+		<pre>
+			<code>
+			</code>
+		</pre>
+
+		<script>
+			document.querySelector('pre code').textContent = document.querySelector("#hl").innerHTML;
+			hljs.initHighlightingOnLoad();
+		</script>
 	</body>
 </html>
