--- a/shadow-dom-create.html
+++ b/shadow-dom-create.html
@@ -3,22 +3,21 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Creating a Shadow DOM</title>
+		<!--<link rel="stylesheet" href="http://yandex.st/highlightjs/8.0/styles/default.min.css">-->
+		<link rel="stylesheet" href="hlcss.css">
+		<script src="http://yandex.st/highlightjs/8.0/highlight.min.js"></script>
 	</head>
 	<body>
 		<div>
 			<h1>Let's explore the Shadow DOM</h1>
 			<input id="foo" type="range">
 		</div>
-		<div>
+		<div id="hl">
 			<h2>My Own Shadow DOM</h2>
 			<template id="shadow">
-				<div class="shadow-container">
-					Hello Shadow!
-				</div>
+				<div class="shadow-container">Hello Shadow!</div>
 			</template>
-			<div id="shadow-host">
-				Hello World!
-			</div>
+			<div id="shadow-host">Hello World!</div>
 			<script>
 				var shadowHost = document.querySelector('#shadow-host'),
 					shadowRoot = shadowHost.createShadowRoot(),
@@ -28,5 +27,15 @@
 				
 			</script>
 		</div>
+		<!-- For the codez -->
+		<pre>
+			<code>
+			</code>
+		</pre>
+
+		<script>
+			document.querySelector('pre code').textContent = document.querySelector("#hl").innerHTML;
+			hljs.initHighlightingOnLoad();
+		</script>
 	</body>
 </html>
