--- a/shadow-dom-select.html
+++ b/shadow-dom-select.html
@@ -3,9 +3,12 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Inserting content into the Shadow DOM</title>
+		<!--<link rel="stylesheet" href="http://yandex.st/highlightjs/8.0/styles/default.min.css">-->
+		<link rel="stylesheet" href="hlcss.css">
+		<script src="http://yandex.st/highlightjs/8.0/highlight.min.js"></script>
 	</head>
 	<body>
-		<div>
+		<div id="hl">
 			<h1>Insertion Points</h1>
 			<template id="shadow">
 				<div class="shadow-container">
@@ -36,5 +39,15 @@
 				shadowRoot.appendChild(template.content.cloneNode(true));
 			</script>
 		</div>
+		<!-- For the codez -->
+		<pre>
+			<code>
+			</code>
+		</pre>
+
+		<script>
+			document.querySelector('pre code').textContent = document.querySelector("#hl").innerHTML;
+			hljs.initHighlightingOnLoad();
+		</script>
 	</body>
 </html>
