--- a/shadow-dom-select.html
+++ b/shadow-dom-select.html
@@ -3,11 +3,20 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Inserting content into the Shadow DOM</title>
+		<link href="style.css" rel="stylesheet" type="text/css" />
 	</head>
 	<body>
 		<div>
 			<h1>Insertion Points</h1>
 			<template id="shadow">
+				<style type="text/css">
+					.shadow-container {
+						padding: 1em;
+						margin: 1em;
+						border: 2px solid cornflowerblue;
+						border-radius: 5px;
+					}
+				</style>
 				<div class="shadow-container">
 					<h1>
 						Hello <content select=".world"></content>
